
*** IMPORTANT UPGRADE NOTICE ***

This version uses a different database format. Before upgrading, export your 
old data as xml. After upgrade, create a new database and import the old data
from the xml file.

	
MNEMOSYNE 1.0.2 :

-Added import/export support for CueCard wcu files (Chris Aakre).
-Added features to improve display of map cards from svgtoquiz (Timothy 
 Bourke).
-Added midi files to "import sound" file dialog (suggested by Johan Forsberg).
-Make dvipng invocation more robust. Especially helpful for Ubuntu users.
 (Thanks to Stephen Boulet and franny1).
-Changed compression format of the backups from bz2 to gz. This results in
 less compression, but a much faster program exit (suggested by Konrad Wojas).
-Fixed bug where relative paths wouldn't work with non-standard directory
 locations (reported by reynard and stvltvs).
-Fixed bug with non-latin filenames and increase size of non-latin characters
 (Nils Barth).
-Make import of Supermemo for Palm databases more robust (Felix Engel).
-Make XML import from svgtoquiz more robust (bug reported by Mercado1).
-Polish translation by Tomasz Nazarenko.
-Japanese translation by Patrick Kenny.
-Persian translation by Bahman Eslami.

	
MNEMOSYNE 1.0.1.1 : 2008-03-22
	
-Disabled making grade 0 the keyboard default for cards with previous
 grades 0 or 1, as a (Py)Qt bug seems to make it unreliable under Windows
 (reported by Bernhard Blum).
	
	
MNEMOSYNE 1.0.1 : 2008-03-16

-Make grade 0 the keyboard default for cards with previous grades 0 or 1.
-Add support for html style escaped unicode in txt import, to allow import
 of Supermemo databases containing unicode (requested by Patrick Kenny).
-Support import of Supermemo for Palm databases that were converted to XML
 by smconv.pl from http://smconvpl.sourceforge.net (code by Felix Engel).
-Make import of tab delimited files more robust (reported by nairbv).
-Added new option in config.py (backups_to_keep) to be able to change the